# python-project-51

./: Makefile  README.md  pyproject.toml
.github/workflows/: page-loader-check.yml
page_loader/: assets_handler.py  cli.py  content_downloader.py  downloader.py  page_loader.py
page_loader/handlers/: assets_handler.py  request_handler.py
page_loader/scripts/: page_loader.py
tests/: args_test.py  assets_test.py  download_test.py  naming_test.py
