[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Script that loads all content from web and save locally"
authors = ["Gregtmj <gregtmj@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
requests-mock = "^1.10.0"
pytest = "^7.2.0"
pytest-coverage = "^0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
